Sonar issues Fixed